Line spacing for segue h2 is 1

--- a/template.html
+++ b/template.html
@@ -125,7 +125,7 @@ URL: https://code.google.com/p/io-2012-slides
       <h3>... but not the way you want.</h3>
     </hgroup>
     <article class="flexbox vcenter" style="margin-top:-30px;">
-      <img src="images/hack-headlines.png" class="reflect" alt="Google+ Sign-In" title="Google+ Sign-In">
+      <img src="images/hack-headlines.png" class="reflect" alt="Hack Headlines" title="Hack Headlines">
       <footer class="source">
         Google News, May 11, 2013
       </footer>
@@ -173,8 +173,8 @@ URL: https://code.google.com/p/io-2012-slides
       <h2>Based on OAuth 2.0</h2>
     </hgroup>
     <article class="flexbox vcenter">
-      <img style="position: absolute; right: 40px; top:30px;" src="images/oauth-2-sm.png" class="reflect" alt="Google+ Sign-In" title="Google+ Sign-In">
-      <img width="800px" src="images/permission.png" class="reflect" alt="Google+ Sign-In" title="Google+ Sign-In">
+      <img style="position: absolute; right: 40px; top:30px;" src="images/oauth-2-sm.png" class="reflect" alt="OAuth 2.0" title="OAuth 2.0">
+      <img width="800px" src="images/permission.png" class="reflect" alt="Permission Triangle" title="Permission Triangle">
       <footer class="source">OAuth 2.0 logo from http://oauth.net/2/</footer>
     </article>
   </slide>
@@ -208,7 +208,7 @@ URL: https://code.google.com/p/io-2012-slides
       </table>
     </article>
     <article style="float:right; width:40%; margin-top:-100px;" class="flexbox vcenter">
-      <img width="350px" src="images/create-api-console-project.png" class="reflect" alt="Google+ Sign-In" title="Google+ Sign-In"><br />
+      <img width="350px" src="images/create-api-console-project.png" class="reflect" alt="Create Google API Console Project" title="Create Google API Console Project"><br />
     </article>
   </slide>
 
@@ -242,14 +242,14 @@ URL: https://code.google.com/p/io-2012-slides
       <h3>The connecting lines require auth</h3>
     </hgroup>
     <article class="flexbox vcenter" style="margin-top:-30px;">
-      <img width="600px" src="images/auth-triangle.png" class="reflect" alt="Google+ Sign-In" title="Google+ Sign-In">
+      <img width="600px" src="images/auth-triangle.png" class="reflect" alt="Auth Triangle" title="Auth Triangle">
     </article>
   </slide>
 
   <slide class="segue dark nobackground">
     <aside class="gdbar"><img src="images/google_developers_icon_128.png"></aside>
     <hgroup class="auto-fadein">
-      <h2>Client Auth: How to connect<br/>your app client with Google</h2>
+      <h2>Client Auth: How to connect your app client with Google</h2>
     </hgroup>
   </slide>
 
@@ -257,7 +257,7 @@ URL: https://code.google.com/p/io-2012-slides
     <hgroup>
       <h2>Client Auth</h2>
     </hgroup>
-    <article style="float: left; width: 25%">
+    <article class="larger" style="float: left; width: 25%">
       <ul>
         <li>Android</li>
         <li>iOS</li>
@@ -265,7 +265,7 @@ URL: https://code.google.com/p/io-2012-slides
       </ul>
     </article>
     <article style="float:right; width:60%; margin-top: 75px;">
-      <img width="600" src="images/client-auth.png" class="reflect" alt="Google+ Sign-In" title="Google+ Sign-In"><br />
+      <img width="100%" src="images/client-auth.png" class="reflect" alt="Client Auth" title="Client Auth"><br />
       <footer class="source">Client Auth</footer>
     </article>
   </slide>
@@ -559,7 +559,7 @@ function signinCallback(authResult) {
   <slide class="segue dark nobackground">
     <aside class="gdbar"><img src="images/google_developers_icon_128.png"></aside>
     <hgroup class="auto-fadein">
-      <h2>Server Auth: How to connect<br/>your app server with Google</h2>
+      <h2>Server Auth: How to connect your app server with Google</h2>
     </hgroup>
   </slide>
 
@@ -567,14 +567,14 @@ function signinCallback(authResult) {
     <hgroup>
       <h2>Server Auth</h2>
     </hgroup>
-    <article style="float: left; width: 25%">
+    <article class="larger" style="float: left; width: 25%">
       <ul>
         <li>Android / iOS</li>
         <li>Web</li>
       </ul>
     </article>
     <article style="float:right; width:60%; margin-top: 75px;">
-      <img width="600" src="images/server-auth.png" class="reflect" alt="Server Auth" title="Server Auth"><br />
+      <img width="100%" src="images/server-auth.png" class="reflect" alt="Server Auth" title="Server Auth"><br />
       <footer class="source">Server Auth</footer>
     </article>
   </slide>
@@ -756,16 +756,9 @@ Full code, including Java and C#, available in our Quickstarts
       </ul>
     </article>
     <article style="float:right; width:25%; margin-top: 180px">
-      <img width="200px" src="images/ian-barber.jpg" class="reflect" alt="Google+ Sign-In" title="Google+ Sign-In"><br />
+      <img width="200px" src="images/ian-barber.jpg" class="reflect" alt="Ian Barber" title="Ian Barber"><br />
     </article>
   </slide>
-
-<!--
-    <article style="float: left; width: 50%">
-    </article>
-    <article style="float:right; width:50%">
-      <img width="100%" src="images/chart.png" class="reflect" alt="Google+ Sign-In" title="Google+ Sign-In"><br />
--->
 
   <slide>
     <hgroup>
