Larger table for "Ways To Enable Server-Side Auth"

--- a/template.html
+++ b/template.html
@@ -715,22 +715,25 @@ Full code, including Java and C#, available in our Quickstarts
     <hgroup>
       <h2>Ways To Enable Server-Side Auth</h2>
     </hgroup>
-    <article>
+    <article style="font-size: 300%; margin-top: 60px;">
       <table>
         <tr>
-          <th></th><th>Android</th><th>iOS</th><th>Web</th>
+          <th style="font-size: 50%"></th>
+          <th style="font-size: 50%">Android</th>
+          <th style="font-size: 50%">iOS</th>
+          <th style="font-size: 50%">Web</th>
         </tr>
         <tr>
-          <td>Access Token</td>
-          <td><font color="green">✓</font></td>
-          <td><font color="green">✓</font></td>
-          <td><font color="aaaa00">Optional</font></td>
+          <td style="font-size: 40%">Access Token To Server</td>
+          <td style="font-size: 40%"><font color="green">✓</font></td>
+          <td style="font-size: 40%"><font color="green">✓</font></td>
+          <td style="font-size: 40%"><font color="aaaa00">Optional</font></td>
         </tr>
         <tr>
-          <td>One-Time Code</td>
-          <td>-</td>
-          <td>-</td>
-          <td><font color="green">✓ (Offline Access)</font></td>
+          <td style="font-size: 40%">One-Time Code To Upgrade</td>
+          <td style="font-size: 40%">-</td>
+          <td style="font-size: 40%">-</td>
+          <td style="font-size: 40%"><font color="green">✓ (Offline Access)</font></td>
         </tr>
       </table>
     </article>
