Reworded One-Time code in table

--- a/template.html
+++ b/template.html
@@ -733,7 +733,7 @@ Full code, including Java and C#, available in our Quickstarts
           <td style="font-size: 40%">One-Time Code To Upgrade</td>
           <td style="font-size: 40%">-</td>
           <td style="font-size: 40%">-</td>
-          <td style="font-size: 40%"><font color="green">✓ (Offline Access)</font></td>
+          <td style="font-size: 40%"><font color="green">✓</font></td>
         </tr>
       </table>
     </article>
