Added California Identification and Google I/O Badge images.

--- a/template.html
+++ b/template.html
@@ -90,8 +90,9 @@ URL: https://code.google.com/p/io-2012-slides
         </ul>
       </ul>
     </article>
-    <article style="float:right; width:50%">
-      <img width="100%" src="images/chart.png" class="reflect" alt="Identity and Permsision" title="Identity and Permsision"><br />
+    <article class="flexbox vcenter" style="float:right; width:50%; margin-top: -30px;">
+      <img width="250px" src="images/identification.png" alt="California Identification" title="California Identification"><br />
+      <img style="margin-left: 30px;" width="200px" src="images/io-badge.jpg" class="reflect" alt="Google I/O Badge" title="Google I/O Badge"><br />
     </article>
   </slide>
 
