--- a/template.html
+++ b/template.html
@@ -758,8 +758,8 @@ Full code, including Java and C#, available in our Quickstarts
           <td style="font-size: 40%"><font color="aaaa00">Optional</font></td>
         </tr>
         <tr>
-          <td style="font-size: 40%">Exchange One-Time Code*</td>
-          <td style="font-size: 40%">-</td>
+          <td style="font-size: 40%">Exchange One-Time Code *</td>
+          <td style="font-size: 40%"><font color="aaaa00">Optional</font></td>
           <td style="font-size: 40%">-</td>
           <td style="font-size: 40%"><font color="green">✓</font></td>
         </tr>
