--- a/template.html
+++ b/template.html
@@ -694,6 +694,11 @@ try {
       <h3>Send One-Time Authorization Code<h3>
     </hgroup>
     <article>
+      <ul>
+        <li>Code can only be used by your server</li>
+        <li>Code can get an Access Token and a Refresh Token</li>
+        <li>Refresh Tokens do not expire</li>
+      </ul>
       <pre class="prettyprint" data-lang="JavaScript">
 function signinCallback(authResult) {
   if (authResult['access_token']) {
@@ -712,16 +717,7 @@ function signinCallback(authResult) {
     <hgroup>
       <h2>Server: Exchange Authorization Code</h2>
     </hgroup>
-    <article>
-      <ul>
-        <li>More secure because code can only be used by your server</li>
-        <li>Can ask for offline access and get a refresh token</li>
-        <ul>
-          <li>Access Token: Expires after one hour</li>
-          <li>Refresh Token: Does not expire</li>
-        </ul>
-        <li></li>
-      </ul>
+    <article class="flexbox vcenter">
       <pre class="prettyprint" data-lang="Ruby">
 $authorization.code = request.body.read
 <b>$authorization.fetch_access_token!</b>
@@ -734,7 +730,7 @@ code = request.data
 $code = $request->getContent();
 <b>$client->authenticate($code);</b>
 </pre>
-Full code, including Java and C#, available in our Quickstarts
+Full code, including Java and C#/.NET, available in our Quickstarts
     </article>
     <img class="corner-placemark" src="images/server-auth.png" class="reflect" alt="Server Auth" title="Server Auth">
   </slide>
@@ -747,20 +743,20 @@ Full code, including Java and C#, available in our Quickstarts
       <table style="font-size: 280%;">
         <tr>
           <th style="font-size: 50%"></th>
-          <th style="font-size: 50%">Android</th>
           <th style="font-size: 50%">iOS</th>
+          <th style="font-size: 50%">Android</th>
           <th style="font-size: 50%">Web</th>
         </tr>
         <tr>
           <td style="font-size: 40%">Verify Access Token</td>
           <td style="font-size: 40%"><font color="green">✓</font></td>
-          <td style="font-size: 40%"><font color="green">✓</font></td>
+          <td style="font-size: 40%"><font color="aaaa00">Optional</font></td>
           <td style="font-size: 40%"><font color="aaaa00">Optional</font></td>
         </tr>
         <tr>
           <td style="font-size: 40%">Exchange One-Time Code *</td>
-          <td style="font-size: 40%"><font color="aaaa00">Optional</font></td>
           <td style="font-size: 40%">-</td>
+          <td style="font-size: 40%"><font color="green">✓</font></td>
           <td style="font-size: 40%"><font color="green">✓</font></td>
         </tr>
       </table>
@@ -804,7 +800,9 @@ Full code, including Java and C#, available in our Quickstarts
         <li>Google+ makes authentication easy</li>
         <li>Auth models depend on your architecture</li>
         <li>Learn more and check out our Quickstarts and PhotoHunt at
-            <a href="https://developers.google.com/+/">https://developers.google.com/+/</a></li>
+            <a href="https://developers.google.com/+/">https://developers.google.com/+/</a> and
+            <a href="https://developers.google.com/+/">https://github.com/googleplus</a>
+        </li>
       </ul>
     </article>
   </slide>
