--- a/template.html
+++ b/template.html
@@ -749,13 +749,13 @@ Full code, including Java and C#/.NET, available in our Quickstarts
         <tr>
           <td style="font-size: 40%">Verify Access Token</td>
           <td style="font-size: 40%"><font color="green">✓</font></td>
-          <td style="font-size: 40%"><font color="aaaa00">Optional</font></td>
-          <td style="font-size: 40%"><font color="aaaa00">Optional</font></td>
+          <td style="font-size: 40%"><font color="green">✓</font></td>
+          <td style="font-size: 40%"><font color="green">✓</font></td>
         </tr>
         <tr>
           <td style="font-size: 40%">Exchange One-Time Code *</td>
           <td style="font-size: 40%">-</td>
-          <td style="font-size: 40%"><font color="green">✓</font></td>
+          <td style="font-size: 40%"><font color="green">✓ (new)</font></td>
           <td style="font-size: 40%"><font color="green">✓</font></td>
         </tr>
       </table>
