Update web-client.png and Web: Client Auth asset

--- a/template.html
+++ b/template.html
@@ -506,8 +506,8 @@ protected void onActivityResult(int requestCode,
         <li>Handle auth callback</li>
       </ul>
     </article>
-    <article style="float:right; width:50%; margin-top: 75px;">
-      <img width="100%" src="images/web-client.png" class="reflect" alt="Web Client Auth" title="Web Client Auth">
+    <article style="float:right; width:50%; margin-top: 150px;">
+      <img width="100%" src="images/web-client.png" alt="Web Client Auth" title="Web Client Auth">
       <footer class="source">Web Client Auth</footer>
     </article>
     <img class="corner-placemark" src="images/client-auth.png" class="reflect" alt="Client Auth" title="Client Auth">
