Added Dory link and changed title slide to show G+ URL instead of job title

--- a/template.html
+++ b/template.html
@@ -59,6 +59,7 @@ URL: https://code.google.com/p/io-2012-slides
         <li>Client auth models across Android, iOS, and Web</li>
         <li>Server auth</li>
         <li>Choosing the right one for you</li>
+        <li>Q&A: Submit and vote on questions here <a href="http://goo.gl/48LOh">http://goo.gl/48LOh</a></li>
       </ul>
     </article>
   </slide>
