Put Q&A link on Thank You slide

--- a/template.html
+++ b/template.html
@@ -806,6 +806,7 @@ Full code, including Java and C#/.NET, available in our Quickstarts
     <aside class="gdbar right"><img src="images/google_developers_icon_128.png"></aside>
     <article class="flexbox vleft auto-fadein">
       <h2>&lt;Thank You!&gt;</h2>
+      <h3>Q&A <a style="color: white;" href="http://goo.gl/48LOh">http://goo.gl/48LOh</a>
       <p>developers.google.com/+</p>
     </article>
     <p class="auto-fadein" data-config-contact>
