Order Server Auth items iOS, Android, Web

--- a/template.html
+++ b/template.html
@@ -567,7 +567,8 @@ function signinCallback(authResult) {
     <article class="larger" style="float: left; width: 35%">
       <ul>
         <li>iOS</li>
-        <li>Android / Web</li>
+        <li>Android</li>
+        <li>Web</li>
       </ul>
     </article>
     <article style="float:right; width:60%; margin-top: 75px;">
