Removed '-' in Sign On

--- a/template.html
+++ b/template.html
@@ -214,7 +214,7 @@ URL: https://code.google.com/p/io-2012-slides
         <ul>
           <li>Single user consent across clients</li>
           <li>Google+ Sign-In automatically initializes clients with auth tokens, if available</li>
-          <li>Cross-platform Single Sign-On</li>
+          <li>Cross-platform Single Sign On</li>
         </ul>
       </ul>
     </article>
