Use one of Xiangtian's suggestions for kScopes variable name on iOS

--- a/template.html
+++ b/template.html
@@ -433,7 +433,7 @@ protected void <b>onActivityResult</b>(int requestCode,
     didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
   GPPSignIn *signIn = [GPPSignIn sharedInstance];
   signIn.clientID = @"YOUR_CLIENT_ID"
-  signIn.scopes = SCOPES;
+  signIn.scopes = kScopes;
   signIn.shouldFetchGoogleUserID = YES;
   signIn.delegate = self; // Implements GPPSignInDelegate protocol
 }</b>
